--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
