--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropdown-select": "^4.11.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
